pkgs/dartcv_core/src/core.h

void Mat_Close(MatPtr m);
void Mat_CloseVoid(void *m);
int Mat_Cols(Mat m);
int Mat_Dims(Mat m);
uchar *Mat_Data(Mat m);
CvStatus *Mat_Col(Mat m, int x, Mat *rval);
CvStatus *Mat_CopyTo(Mat m, Mat dst);
CvStatus *Mat_CopyToWithMask(Mat m, Mat dst, Mat mask);
CvStatus *Mat_ConvertTo(Mat m, Mat dst, int type);
CvStatus *Mat_ConvertToWithParams(Mat m, Mat dst, int type, float alpha, float beta);
CvStatus *Mat_ConvertFp16(Mat m, Mat *rval);
CvStatus *Mat_DivideFloat(Mat m, float_t val);
CvStatus *Mat_DivideF64(Mat m, double_t val);
CvStatus *Mat_Compare(Mat src1, Mat src2, Mat dst, int ct);
CvStatus *Mat_CompleteSymm(Mat m, bool lowerToUpper);
CvStatus *Mat_ConvertScaleAbs(Mat src, Mat dst, double alpha, double beta);
CvStatus *Mat_CopyMakeBorder(
    Mat src, Mat dst, int top, int bottom, int left, int right, int borderType, Scalar value
);
int  Mat_CountNonZero(Mat src);
CvStatus *Mat_DCT(Mat src, Mat dst, int flags);
CvStatus *Mat_Determinant(Mat m, double *rval);
CvStatus *Mat_DFT(Mat src, Mat dst, int flags, int nonzeroRows);
CvStatus *Mat_Divide(Mat src1, Mat src2, Mat dst, double scale, int dtype);