pkgs/dartcv_core/src/core_async.h

// CvStatus *Mat_Release_Async(MatPtr self, CvCallback_0 callback);
// CvStatus *Mat_Empty_Async(Mat self, CvCallback_1 callback);        // bool *rval
// CvStatus *Mat_IsContinuous_Async(Mat self, CvCallback_1 callback); // bool *rval
CvStatus *Mat_Clone_Async(Mat self, CvCallback_1 callback);        // Mat *dst
CvStatus *Mat_CopyTo_Async(Mat self, Mat dst, CvCallback_0 callback);
CvStatus *Mat_CopyToWithMask_Async(Mat self, Mat dst, Mat mask, CvCallback_0 callback);
CvStatus *Mat_ConvertTo_Async(Mat self, int type, CvCallback_1 callback); // Mat dst
CvStatus *Mat_ConvertToWithParams_Async(
    Mat self, int type, float alpha, float beta, CvCallback_1 callback
);                                                               // Mat dst