pkgs/dartcv_core/lib/src/g/core.g.dart


  ffi.Pointer<CvStatus> Mat_Clone_Async(
    Mat self,
    imp1.CvCallback_1 callback,
  ) {
    return _Mat_Clone_Async(
      self,
      callback,
    );
  }

  late final _Mat_Clone_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, imp1.CvCallback_1)>>('Mat_Clone_Async');
  late final _Mat_Clone_Async = _Mat_Clone_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, imp1.CvCallback_1)>();

  void Mat_Close(
    imp1.MatPtr m,
  ) {
    return _Mat_Close(
      m,
    );
  }

  late final _Mat_ClosePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(imp1.MatPtr)>>('Mat_Close');
  late final _Mat_Close =
      _Mat_ClosePtr.asFunction<void Function(imp1.MatPtr)>();

  void Mat_CloseVoid(
    ffi.Pointer<ffi.Void> m,
  ) {
    return _Mat_CloseVoid(
      m,
    );
  }

  late final _Mat_CloseVoidPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'Mat_CloseVoid');
  late final _Mat_CloseVoid =
      _Mat_CloseVoidPtr.asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<CvStatus> Mat_Col(
    Mat m,
    int x,
    ffi.Pointer<Mat> rval,
  ) {
    return _Mat_Col(
      m,
      x,
      rval,
    );
  }

  late final _Mat_ColPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, ffi.Int, ffi.Pointer<Mat>)>>('Mat_Col');
  late final _Mat_Col = _Mat_ColPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, int, ffi.Pointer<Mat>)>();

  int Mat_Cols(
    Mat m,
  ) {
    return _Mat_Cols(
      m,
    );
  }

  late final _Mat_ColsPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(Mat)>>('Mat_Cols');
  late final _Mat_Cols =
      _Mat_ColsPtr.asFunction<int Function(Mat)>(isLeaf: true);

  ffi.Pointer<CvStatus> Mat_Compare(
    Mat src1,
    Mat src2,
    Mat dst,
    int ct,
  ) {
    return _Mat_Compare(
      src1,
      src2,
      dst,
      ct,
    );
  }

  late final _Mat_ComparePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, Mat, Mat, ffi.Int)>>('Mat_Compare');
  late final _Mat_Compare = _Mat_ComparePtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, int)>();

  ffi.Pointer<CvStatus> Mat_CompleteSymm(
    Mat m,
    bool lowerToUpper,
  ) {
    return _Mat_CompleteSymm(
      m,
      lowerToUpper,
    );
  }

  late final _Mat_CompleteSymmPtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, ffi.Bool)>>(
      'Mat_CompleteSymm');
  late final _Mat_CompleteSymm = _Mat_CompleteSymmPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, bool)>();

  ffi.Pointer<CvStatus> Mat_ConvertFp16(
    Mat m,
    ffi.Pointer<Mat> rval,
  ) {
    return _Mat_ConvertFp16(
      m,
      rval,
    );
  }

  late final _Mat_ConvertFp16Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, ffi.Pointer<Mat>)>>('Mat_ConvertFp16');
  late final _Mat_ConvertFp16 = _Mat_ConvertFp16Ptr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, ffi.Pointer<Mat>)>();

  ffi.Pointer<CvStatus> Mat_ConvertScaleAbs(
    Mat src,
    Mat dst,
    double alpha,
    double beta,
  ) {
    return _Mat_ConvertScaleAbs(
      src,
      dst,
      alpha,
      beta,
    );
  }

  late final _Mat_ConvertScaleAbsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, Mat, ffi.Double, ffi.Double)>>('Mat_ConvertScaleAbs');
  late final _Mat_ConvertScaleAbs = _Mat_ConvertScaleAbsPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat, double, double)>();

  ffi.Pointer<CvStatus> Mat_ConvertTo(
    Mat m,
    Mat dst,
    int type,
  ) {
    return _Mat_ConvertTo(
      m,
      dst,
      type,
    );
  }

  late final _Mat_ConvertToPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, Mat, ffi.Int)>>('Mat_ConvertTo');
  late final _Mat_ConvertTo = _Mat_ConvertToPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat, int)>();

  ffi.Pointer<CvStatus> Mat_ConvertToWithParams(
    Mat m,
    Mat dst,
    int type,
    double alpha,
    double beta,
  ) {
    return _Mat_ConvertToWithParams(
      m,
      dst,
      type,
      alpha,
      beta,
    );
  }

  late final _Mat_ConvertToWithParamsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, Mat, ffi.Int, ffi.Float,
              ffi.Float)>>('Mat_ConvertToWithParams');
  late final _Mat_ConvertToWithParams = _Mat_ConvertToWithParamsPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat, int, double, double)>();

  ffi.Pointer<CvStatus> Mat_ConvertToWithParams_Async(
    Mat self,
    int type,
    double alpha,
    double beta,
    imp1.CvCallback_1 callback,
  ) {
    return _Mat_ConvertToWithParams_Async(
      self,
      type,
      alpha,
      beta,
      callback,
    );
  }

  late final _Mat_ConvertToWithParams_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Float, ffi.Float,
              imp1.CvCallback_1)>>('Mat_ConvertToWithParams_Async');
  late final _Mat_ConvertToWithParams_Async =
      _Mat_ConvertToWithParams_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, int, double, double, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> Mat_ConvertTo_Async(
    Mat self,
    int type,
    imp1.CvCallback_1 callback,
  ) {
    return _Mat_ConvertTo_Async(
      self,
      type,
      callback,
    );
  }

  late final _Mat_ConvertTo_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, ffi.Int, imp1.CvCallback_1)>>('Mat_ConvertTo_Async');
  late final _Mat_ConvertTo_Async = _Mat_ConvertTo_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, int, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> Mat_CopyMakeBorder(
    Mat src,
    Mat dst,
    int top,
    int bottom,
    int left,
    int right,
    int borderType,
    Scalar value,
  ) {
    return _Mat_CopyMakeBorder(
      src,
      dst,
      top,
      bottom,
      left,
      right,
      borderType,
      value,
    );
  }

  late final _Mat_CopyMakeBorderPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, Mat, ffi.Int, ffi.Int, ffi.Int,
              ffi.Int, ffi.Int, Scalar)>>('Mat_CopyMakeBorder');
  late final _Mat_CopyMakeBorder = _Mat_CopyMakeBorderPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, Mat, int, int, int, int, int, Scalar)>();

  ffi.Pointer<CvStatus> Mat_CopyTo(
    Mat m,
    Mat dst,
  ) {
    return _Mat_CopyTo(
      m,
      dst,
    );
  }

  late final _Mat_CopyToPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, Mat)>>(
          'Mat_CopyTo');
  late final _Mat_CopyTo =
      _Mat_CopyToPtr.asFunction<ffi.Pointer<CvStatus> Function(Mat, Mat)>();

  ffi.Pointer<CvStatus> Mat_CopyToWithMask(
    Mat m,
    Mat dst,
    Mat mask,
  ) {
    return _Mat_CopyToWithMask(
      m,
      dst,
      mask,
    );
  }

  late final _Mat_CopyToWithMaskPtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, Mat, Mat)>>(
      'Mat_CopyToWithMask');
  late final _Mat_CopyToWithMask = _Mat_CopyToWithMaskPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat, Mat)>();

  ffi.Pointer<CvStatus> Mat_CopyToWithMask_Async(
    Mat self,
    Mat dst,
    Mat mask,
    imp1.CvCallback_0 callback,
  ) {
    return _Mat_CopyToWithMask_Async(
      self,
      dst,
      mask,
      callback,
    );
  }

  late final _Mat_CopyToWithMask_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, Mat, Mat, imp1.CvCallback_0)>>('Mat_CopyToWithMask_Async');
  late final _Mat_CopyToWithMask_Async =
      _Mat_CopyToWithMask_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> Mat_CopyTo_Async(
    Mat self,
    Mat dst,
    imp1.CvCallback_0 callback,
  ) {
    return _Mat_CopyTo_Async(
      self,
      dst,
      callback,
    );
  }

  late final _Mat_CopyTo_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, Mat, imp1.CvCallback_0)>>('Mat_CopyTo_Async');
  late final _Mat_CopyTo_Async = _Mat_CopyTo_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat, imp1.CvCallback_0)>();

  int Mat_CountNonZero(
    Mat src,
  ) {
    return _Mat_CountNonZero(
      src,
    );
  }

  late final _Mat_CountNonZeroPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(Mat)>>('Mat_CountNonZero');
  late final _Mat_CountNonZero =
      _Mat_CountNonZeroPtr.asFunction<int Function(Mat)>(isLeaf: true);

  ffi.Pointer<CvStatus> Mat_DCT(
    Mat src,
    Mat dst,
    int flags,
  ) {
    return _Mat_DCT(
      src,
      dst,
      flags,
    );
  }

  late final _Mat_DCTPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, Mat, ffi.Int)>>('Mat_DCT');
  late final _Mat_DCT =
      _Mat_DCTPtr.asFunction<ffi.Pointer<CvStatus> Function(Mat, Mat, int)>();

  ffi.Pointer<CvStatus> Mat_DFT(
    Mat src,
    Mat dst,
    int flags,
    int nonzeroRows,
  ) {
    return _Mat_DFT(
      src,
      dst,
      flags,
      nonzeroRows,
    );
  }

  late final _Mat_DFTPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, Mat, ffi.Int, ffi.Int)>>('Mat_DFT');
  late final _Mat_DFT = _Mat_DFTPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat, int, int)>();

  ffi.Pointer<imp1.uchar> Mat_Data(
    Mat m,
  ) {
    return _Mat_Data(
      m,
    );
  }

  late final _Mat_DataPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<imp1.uchar> Function(Mat)>>(
          'Mat_Data');
  late final _Mat_Data =
      _Mat_DataPtr.asFunction<ffi.Pointer<imp1.uchar> Function(Mat)>(
          isLeaf: true);

  ffi.Pointer<CvStatus> Mat_Determinant(
    Mat m,
    ffi.Pointer<ffi.Double> rval,
  ) {
    return _Mat_Determinant(
      m,
      rval,
    );
  }

  late final _Mat_DeterminantPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, ffi.Pointer<ffi.Double>)>>('Mat_Determinant');
  late final _Mat_Determinant = _Mat_DeterminantPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, ffi.Pointer<ffi.Double>)>();

  int Mat_Dims(
    Mat m,
  ) {
    return _Mat_Dims(
      m,
    );
  }

  late final _Mat_DimsPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(Mat)>>('Mat_Dims');
  late final _Mat_Dims =
      _Mat_DimsPtr.asFunction<int Function(Mat)>(isLeaf: true);

  ffi.Pointer<CvStatus> Mat_Divide(
    Mat src1,
    Mat src2,
    Mat dst,
    double scale,
    int dtype,
  ) {
    return _Mat_Divide(
      src1,
      src2,
      dst,
      scale,
      dtype,
    );
  }

  late final _Mat_DividePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, Mat, Mat, ffi.Double, ffi.Int)>>('Mat_Divide');
  late final _Mat_Divide = _Mat_DividePtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, double, int)>();

  ffi.Pointer<CvStatus> Mat_DivideF64(
    Mat m,
    double val,
  ) {
    return _Mat_DivideF64(
      m,
      val,
    );
  }

  late final _Mat_DivideF64Ptr = _lookup<
          ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, double_t)>>(
      'Mat_DivideF64');
  late final _Mat_DivideF64 = _Mat_DivideF64Ptr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, double)>();

  ffi.Pointer<CvStatus> Mat_DivideFloat(
    Mat m,
    double val,
  ) {
    return _Mat_DivideFloat(
      m,
      val,
    );
  }
